# Assignment4

./: .gitignore  CMakeLists.txt  CarInsurance.cpp  CarInsurance.h  Dictionary.cpp  Dictionary.h  InsurancePolicy.cpp  InsurancePolicy.h  q1.cpp  q2.cpp  q3.cpp  q4.cpp  q4template.cpp  q5.cpp
