cmake_minimum_required(VERSION 3.29)
project(Ass4)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ass4
#        main.cpp
#        q1.cpp
#        q2.cpp

#        q3.cpp
#        InsurancePolicy.cpp
#        InsurancePolicy.h
#        CarInsurance.cpp
#        CarInsurance.h

#        q4.cpp
#        q4template.cpp

        q5.cpp
        Dictionary.cpp
        Dictionary.h
)
